--- a/Morfis/MOFIS ERP/Properties/Resources.resx
+++ b/Morfis/MOFIS ERP/Properties/Resources.resx
@@ -121,4 +121,12 @@
   <data name="icon_Adv" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_Adv.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="LOGO" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LOGO.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <comment>LOGO MOFIS - ERP</comment>
+  </data>
+  <data name="LOGOTIPO" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LOGOTIPO.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <comment>LOGOTIPO MOFIS - ERP</comment>
+  </data>
 </root>
